fix: overflow ellipsis

--- a/projects/angular/src/popover/dropdown/_dropdown.clarity.scss
+++ b/projects/angular/src/popover/dropdown/_dropdown.clarity.scss
@@ -149,8 +149,7 @@
       }
 
       &.expandable {
-        padding-right: tokens.$cds-global-space-5;
-
+        padding-right: density.$clr-base-horizontal-offset-xs;
         &:after {
           content: '';
           -webkit-mask: icons.generateCaretIcon("'none'");
@@ -162,11 +161,7 @@
           background-color: dropdown-variables.$clr-dropdown-item-color;
           @include mixins.equilateral(density.$clr-base-icon-size-xs);
           transform: rotate(-90deg);
-          position: absolute;
-          right: density.$clr-base-horizontal-offset-xs;
-          // The original token that needs to be used for the size of this icon is "clr-base-icon-size-s" but as we don't have it as a real icon
-          // here we need to use lower size and add additional space to simulate the padding that is part of the SVGs.
-          margin: calc(var(--clr-base-icon-size-s) - var(--clr-base-icon-size-xs));
+          flex: 0 0 auto;
         }
 
         &.active:after {
@@ -190,6 +185,10 @@
       }
       &:focus {
         outline-offset: calc(-1 * tokens.$cds-global-space-2);
+      }
+      &-content {
+        @extend %dropdown-content;
+        flex: 1 1 auto;
       }
     }
 
